changed img bottom of firewood page from absolute to stop it floating on smaller screens

--- a/forest_site/forest_site/static/main2.css
+++ b/forest_site/forest_site/static/main2.css
@@ -135,7 +135,9 @@ footer{
   margin-top: 80px;
 }
 .wood_sidebar{
-  position: absolute;
-  bottom: 5em;
+  /*position: absolute;*/
+  padding-bottom: 5em;
+  padding-top: 5em;
+
 
 }
